[package]
name = "hyper-microservice"
version = "0.1.0"
authors = ["codadensys <codadensys@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
rand = "0.5"
futures = "0.1"
slab = "0.4.0"
lazy_static = "1.0"
regex = "1.0"