[package]
name = "random-service"
version = "0.1.0"
authors = ["codadenys <codadensys@outloook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
rand  = "0.5"
pretty_env_logger = "0.2"
log   = "0.4"
dotenv = "0.13"

